--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,17 @@ body {
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2; /* number of lines to show */
 }
+.input {
+    max-width: 480px;
+    min-width: 480px;
+    font-size: 12px !important;
+    height: 30px !important;
+    border: 1px solid #bdc3c7 !important;
+    background-color: #fff !important;
+    padding: 0 12px !important;
+    color: #555 !important;
+    margin: 0px 0px 5px 7px;
+}
 .search-input {
   padding: 10px;
   margin: 0px 0px 5px 7px;
@@ -46,6 +57,16 @@ body {
 }
 .guide:hover {
   text-decoration: none;
+}
+.radio_open {
+  background-color: white;
+  border: 1px solid #bdc3c7 !important;
+  padding: 10px;
+  margin-bottom: 5px;
+}
+.radio_open label{
+  font-size: 12px;
+  color: black;
 }
 .img-thumbnail {
   cursor: pointer;
