--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,12 @@ body {
     min-width:500px;
     overflow-x:hidden;
     overflow-y: auto;
-    background-color: #ecf0f1;
+    background-color: #fff;
+}
+.well  {
+   -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
 }
 .loading {
   padding: 5px;
