--- a/css/iframe.css
+++ b/css/iframe.css
@@ -1,4 +1,4 @@
-#Youtoo{
+/* #Youtoo{
     cursor: -webkit-grabbing;
     width:360px;
     height:210px;
@@ -9,4 +9,35 @@
     left:35%;
     border-radius:2px;
     padding: 25px 0px 0px 0px;
+} */
+
+.modal-Youtoo {
+    cursor: -webkit-grabbing;
+    width:360px;
+    height:210px;
+    background-image:url(/img/bg.png);
+    z-index:9000000000;
+    position: fixed;
+    border: 1px;
+    top:30%;
+    left:35%;
+    border-radius:2px;
+    padding: 28px 0px 0px 0px;
+}
+.close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: rgba(0,0,0,0.3);
+    height: 30px;
+    width: 30px;
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.close:hover,
+.close:focus {
+    color: #000000;
+    cursor: pointer;
 }
