--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-    min-width:150px;
+    min-width:250px;
+    min-height:250px;
     overflow-x:hidden;
     overflow-y: auto;
     background-color: #fff;
